Fix hero content overflow on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
   margin-bottom: 0;
   background-image:url('../img/bg.jpg');
   background-size:cover;
-  height:400px;
+  height:500px;
 }
 
 .blur {
